force-app/main/default/objects/Tax_Invoice_Fee_Breakdown__c/Tax_Invoice_Fee_Breakdown__c.object-meta.xml
<CustomObject>
    <description>A detailed breakdown of the total amount reflected in the tax invoice object</description>
    <label>Tax Invoice Fee Breakdown</label>
    <nameField>
        <displayFormat>ICLINVFEE-{0000000000}</displayFormat>
        <label>Tax Invoice Fees Breakdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Invoice Fees Breakdown</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>