force-app/main/default/objects/Tax_Invoice_Fee_Breakdown__c/fields/Amount_Excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excl_GST__c</fullName>
    <formula>Unit_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Excl GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>