force-app/main/default/objects/Tax_Invoice_Fee_Breakdown__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of service or Reason for Credit</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>