force-app/main/default/objects/Tax_Invoice_Fee_Breakdown__c/fields/Tax_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tax Invoice</label>
    <referenceTo>Tax_Invoice__c</referenceTo>
    <relationshipLabel>Tax Invoice Fees Breakdown</relationshipLabel>
    <relationshipName>Tax_Invoice_Fees_Breakdown</relationshipName>
    <type>Lookup</type>
</CustomField>